Improve dzf-vector.
To be more flexible, add some functions as below,

- _dzf_vec_priv_at(_vecptr, _idx)
- dzf_vec_is_full(_vecptr)
- dzf_vec_get_val_at(_vecptr, _idx)
- dzf_vec_get_ptr_at(_vecptr, _idx)

Separate vector test cases from main.c to test_vector.c

- Edit string case.
- Add double type case.
- Add user-defined struct type case.

Please, read documentation or comments.

Edited:
      include/dzf/dzf-vector.h
      examples/test_vector.c

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,6 +1,7 @@
 CC=cc
-CFLAGS=-Wall -Wpedantic -std=c99 -g -I../include -DDZF_DEBUG
-LIBS=
+CFLAGS=-Wall -Wpedantic -std=c99 -g -I./ -I../include -DDZF_DEBUG
+
+LIBS=test_stack.c test_vector.c test_queue.c
 
 all: main
 
@@ -17,4 +18,4 @@ clang:
 		clang ${CFLAGS} -o main main.c ${LIBS}
 
 clean:
-		rm -f main ${LIBS} vgcore.* core.*
+		rm -f main vgcore.* core.*
