examples/Makefile: Add additional memcheck flag
To see information on the sources of uninitialised data in your program,
use the --track-origins=yes option.

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,7 +1,7 @@
 CC=cc
 CFLAGS=-Wall -Wpedantic -std=c99 -g -I./ -I../include -DDZF_DEBUG
 
-LIBS=test_stack.c test_vector.c test_queue.c
+LIBS=test_vector.c
 
 all: main
 
@@ -9,7 +9,7 @@ main:
 		${CC} ${CFLAGS} -o $@ $@.c ${LIBS}
 
 memcheck:
-		valgrind --tool=memcheck --leak-check=full -v ./main
+		valgrind --tool=memcheck --leak-check=full --track-origins=yes -v ./main
 
 gcc:
 		gcc ${CFLAGS} -o main main.c ${LIBS}
